<resources>
    <string name="app_name">Kalkulator Amoeba</string>
    <string name="gambar_amoeba">Gambar amoeba</string>
    <string name="judul">Amoeba adalah organisme kecil bersel tunggal yang hidup dalam kondisi lembap, seperti di air tawar, air asin, tanah, dan di dalam hewan. Amoeba berkembang biak dengan cara aseksual, yakni membelah diri.</string>
    <string name="jumlah_awal_amoeba_hint">Jumlah awal amoeba</string>
    <string name="jumlah_pembelahan_amoeba_hint">Pembelahan amoeba / rentang waktu</string>
    <string name="rentang_waktu_hint">Rentang waktu membelah (menit)</string>
    <string name="jangka_waktu_hint">Jangka waktu (menit)</string>
    <string name="reset">Reset</string>
    <string name="hitung">Hitung</string>
    <string name="jumlah_awal_amoeba_kosong">Jumlah awal amoeba harus diisi!</string>
    <string name="jumlah_pembelahan_amoeba_kosong">Jumlah pembelahan amoeba harus diisi!</string>
    <string name="rentang_waktu_membelah_kosong">Rentang waktu membelah harus diisi!</string>
    <string name="jangka_waktu_kosong">Jangka waktu harus diisi!</string>
    <string name="belum_ada_data">Belum ada data</string>
    <string name="amoeba_awal">Amoeba awal: %1$s</string>
    <string name="pembelahan_amoeba">Pembelahan amoeba: %1$s</string>
    <string name="rentang_waktu">Rentang waktu: %1$s</string>
    <string name="jangka_waktu">Jangka waktu: %1$s</string>
    <string name="hasil_amoeba">Hasil amoeba: %1$s</string>
    <string name="histori">Histori</string>
    <string name="about">Aplikasi hitung amoeba merupakan sebuah aplikasi Android untuk menghitung jumlah pembelahan amoeba dengan rentang dan jangka waktu tertentu, sehingga seseorang dapat mengetahui berapa jumlah pembelahan amoeba yang diperoleh\n\nAplikasi ini dibuat untuk kebutuhan Assessment 1 dan 2. Temukan kodenya di https://github.com/iqbalarr25/6706204091_Iqbal-Arrafi_Mobpro_Assessment2\n\nCopyright © 2021 Iqbal Arrafi.\nAll rights reserved.</string>
    <string name="tentang_aplikasi">Tentang aplikasi</string>
    <string name="save_database">Aktifkan database</string>
    <string name="unsave_database">Nonaktifkan database</string>
    <string name="share_hasil">Share hasil</string>
    <string name="bagikan_template">Tahukah kalian?\nJumlah pembelahan amoeba yang awalnya terdapat %1$s buah amoeba, setelah melakukan pembelahan %2$s amoeba setiap %3$s menit selama %4$s menit, dapat menghasilkan %5$s buah amoeba lohh.</string>
    <string name="username">Username github: %1$s</string>
    <string name="bio">Bio: %1$s</string>
    <string name="location">Lokasi: %1$s</string>
    <string name="github_url">Github url: %1$s</string>
    <string name="koneksi_error">Koneksi error</string>
    <string name="tentang_pembuat">Tentang pembuat</string>
    <string name="channel_name">Updater</string>
    <string name="channel_desc">Update data amoeba otomatis</string>
    <string name="notif_title">GAWAT!!!</string>
    <string name="notif_text">Hari ini kamu belum menghitung pembelahan amoeba!</string>
</resources>